practice/00-pod-mysql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  containers:
  - name: mysql
    image: mysql:8.0
    command: ["docker-entrypoint.sh", "mysqld", "--default-authentication-plugin=mysql_native_password"]
    ports:
    - containerPort: 3306
