practice/02-pod-roundcube.yaml
apiVersion: v1
kind: Pod
metadata:
  name: roundcube
  labels:
    app: roundcube
spec:
  containers:
  - name: roundcube
    image: roundcube/roundcubemail
