practice/09-deployment-rouncube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcube
spec:
  replicas: 3
  selector:
    matchLabels:
      app: roundcube
  template:
    metadata:
      labels:
        app: roundcube
    spec:
      containers:
      - name: roundcube
        image: roundcube/roundcubemail
